--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
     font-size: 16px;
 }
 #background{
-    background-image: url("./pexels-veeterzy-303383.jpg");
+    background-image: url('./background.jpg');
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -34,18 +34,17 @@
 }
 .content p{
     font-style: oblique;
+    font-size: larger;
     margin: 20px;
-    background-color: rgba(158, 226, 247, 0.5);
-    font-weight:550;
-
+    font-weight:500;
 }
 .btn{
-    background-image: linear-gradient(144deg,#AF40FF, #5B42F3 50%,#00DDEB);
-    font-family: 'Courier New', Courier, monospace;
+    background-image: linear-gradient(144deg,#AF40FF, #5B42F3 50%,#00dbeb04);
+    font-family: Georgia, 'Times New Roman', Times, serif;
     font-weight: 600;
     font-size: 24px;
     margin-top: 10px;
-    padding: 5px;
+    padding: 7px;
     width: 25%;
     border: #AF40FF;
     border-radius: 5px;
@@ -53,8 +52,7 @@
 .btn:active,.btn:hover{
     transition: 0.3s;
     cursor: pointer;
-    height: 10%;
-    width: 27%;
+    padding: 10px;
     border: #AF40FF;
 }
 @media only screen and (max-width:799px) {
